@@ -916,12 +916,14 @@ static void push_string(char *str);
 static int found_end();
 static int found_eof();
 
+static char *check_defines(char *symbol);
+
 static struct symbol *current_definition;	/* Used in #define */
 static int quoted; /* Used to prevent #define expansion in ifdef and 
                       ifndef... */
 static int force_decimal; /* Used to force decimal in errorlevel */
 
-#line 925 "scan.c"
+#line 927 "scan.c"
 
 /* Macros after this point can all be overridden by user definitions in
  * section 1.
@@ -1075,9 +1077,9 @@ YY_DECL
 	register char *yy_cp = NULL, *yy_bp = NULL;
 	register int yy_act;
 
-#line 64 "scan.l"
+#line 66 "scan.l"
 
-#line 1081 "scan.c"
+#line 1083 "scan.c"
 
 	if ( yy_init )
 		{
@@ -1163,12 +1165,12 @@ do_action:	/* This label is used only to access EOF actions. */
 
 case 1:
 YY_RULE_SETUP
-#line 65 "scan.l"
+#line 67 "scan.l"
 { BEGIN(incl); }
 	YY_BREAK
 case 2:
 YY_RULE_SETUP
-#line 66 "scan.l"
+#line 68 "scan.l"
 { /* got the include file name */
 			   char *pc = &yytext[yyleng - 1];
 			   if ((*pc == '"') || (*pc == '>'))
@@ -1184,7 +1186,7 @@ case YY_STATE_EOF(define):
 case YY_STATE_EOF(definition):
 case YY_STATE_EOF(title):
 case YY_STATE_EOF(subtitle):
-#line 74 "scan.l"
+#line 76 "scan.l"
 {
 			   if (found_eof())
 			     yyterminate();
@@ -1192,7 +1194,7 @@ case YY_STATE_EOF(subtitle):
 	YY_BREAK
 case 3:
 YY_RULE_SETUP
-#line 78 "scan.l"
+#line 80 "scan.l"
 {
 			   found_end();
 			   yyterminate();
@@ -1200,12 +1202,12 @@ YY_RULE_SETUP
 	YY_BREAK
 case 4:
 YY_RULE_SETUP
-#line 82 "scan.l"
+#line 84 "scan.l"
 { BEGIN(title); }
 	YY_BREAK
 case 5:
 YY_RULE_SETUP
-#line 83 "scan.l"
+#line 85 "scan.l"
 { /* got the title text */
 #define LEN sizeof(state.lst.title_name)
                            yytext[yyleng - 1] = '\0';
@@ -1217,22 +1219,22 @@ YY_RULE_SETUP
 	YY_BREAK
 case 6:
 YY_RULE_SETUP
-#line 91 "scan.l"
+#line 93 "scan.l"
 { BEGIN(subtitle); }
 	YY_BREAK
 case 7:
 YY_RULE_SETUP
-#line 92 "scan.l"
+#line 94 "scan.l"
 { BEGIN(subtitle); }
 	YY_BREAK
 case 8:
 YY_RULE_SETUP
-#line 93 "scan.l"
+#line 95 "scan.l"
 { BEGIN(subtitle); }
 	YY_BREAK
 case 9:
 YY_RULE_SETUP
-#line 94 "scan.l"
+#line 96 "scan.l"
 { /* got the subtitle text */
 #define LEN sizeof(state.lst.subtitle_name)
                            yytext[yyleng - 1] = '\0';
@@ -1244,14 +1246,14 @@ YY_RULE_SETUP
 	YY_BREAK
 case 10:
 YY_RULE_SETUP
-#line 102 "scan.l"
+#line 104 "scan.l"
 {
 			   return CBLOCK;
 			 }
 	YY_BREAK
 case 11:
 YY_RULE_SETUP
-#line 105 "scan.l"
+#line 107 "scan.l"
 {
 			   /* Force decimal interpretation for errorlevel*/
 			   force_decimal = 1;
@@ -1261,14 +1263,14 @@ YY_RULE_SETUP
 	YY_BREAK
 case 12:
 YY_RULE_SETUP
-#line 111 "scan.l"
+#line 113 "scan.l"
 {
 			   return ENDC;
 			 }
 	YY_BREAK
 case 13:
 YY_RULE_SETUP
-#line 114 "scan.l"
+#line 116 "scan.l"
 {
 			   /* fill with ( ) as first argument */
 			   yylval.i = FILL;
@@ -1277,14 +1279,14 @@ YY_RULE_SETUP
 	YY_BREAK
 case 14:
 YY_RULE_SETUP
-#line 119 "scan.l"
+#line 121 "scan.l"
 {
                            BEGIN(define);
 			 }
 	YY_BREAK
 case 15:
 YY_RULE_SETUP
-#line 122 "scan.l"
+#line 124 "scan.l"
 {
                            if((asm_enabled()) && (!state.mac_prev)) {
 			     if ((get_symbol(state.stDefines, yytext) != NULL)
@@ -1305,7 +1307,7 @@ case 16:
 yy_c_buf_p = yy_cp -= 1;
 YY_DO_BEFORE_ACTION; /* set up yytext again */
 YY_RULE_SETUP
-#line 136 "scan.l"
+#line 138 "scan.l"
 {
                            if((asm_enabled()) && (!state.mac_prev)) {
 			     char *string_ptr = yytext;
@@ -1337,7 +1339,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 17:
 YY_RULE_SETUP
-#line 164 "scan.l"
+#line 166 "scan.l"
 {
 			   yylval.i = UPPER;
 			   return UPPER;
@@ -1345,7 +1347,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 18:
 YY_RULE_SETUP
-#line 168 "scan.l"
+#line 170 "scan.l"
 {
 			   yylval.i = HIGH;
 			   return HIGH;
@@ -1353,7 +1355,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 19:
 YY_RULE_SETUP
-#line 172 "scan.l"
+#line 174 "scan.l"
 {
 			   yylval.i = LOW;
 			   return LOW;
@@ -1361,7 +1363,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 20:
 YY_RULE_SETUP
-#line 176 "scan.l"
+#line 178 "scan.l"
 {
 			  /* Force decimal interpretation for list*/
 			  force_decimal = 1;
@@ -1371,7 +1373,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 21:
 YY_RULE_SETUP
-#line 182 "scan.l"
+#line 184 "scan.l"
 {
 			   /* #else and else can appear in column 1 */
 			   yylval.s = strdup(yytext);
@@ -1380,7 +1382,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 22:
 YY_RULE_SETUP
-#line 187 "scan.l"
+#line 189 "scan.l"
 {
 			   /* only #endif can appear in column 1 */
 			   yylval.s = strdup(yytext);
@@ -1389,7 +1391,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 23:
 YY_RULE_SETUP
-#line 192 "scan.l"
+#line 194 "scan.l"
 {
 			   /* #ifdef and ifdef can appear in column 1 */
 			   quoted = 1;
@@ -1399,7 +1401,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 24:
 YY_RULE_SETUP
-#line 198 "scan.l"
+#line 200 "scan.l"
 {
 			   /* #ifndef and ifndef can appear in column 1 */
 			   quoted = 1;
@@ -1409,7 +1411,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 25:
 YY_RULE_SETUP
-#line 204 "scan.l"
+#line 206 "scan.l"
 {
 			   /* #undefine can appear in column 1 */
 			   quoted = 1;
@@ -1419,16 +1421,24 @@ YY_RULE_SETUP
 	YY_BREAK
 case 26:
 YY_RULE_SETUP
-#line 210 "scan.l"
+#line 212 "scan.l"
 {
+			   char *symbol;
+
                            yytext[strlen(yytext) - 3] = '\0';
-                           yylval.s = strdup(yytext);
+
+			   symbol = check_defines(yytext);
+			   if (symbol) {
+                             yylval.s = strdup(symbol);
+			   } else {
+                             yylval.s = strdup(yytext);
+			   }
                            return VARLAB_BEGIN;
                          }
 	YY_BREAK
 case 27:
 YY_RULE_SETUP
-#line 215 "scan.l"
+#line 225 "scan.l"
 { 
 			   int has_collon = 0;
 			   struct symbol *sym;
@@ -1489,55 +1499,59 @@ YY_RULE_SETUP
 	YY_BREAK
 case 28:
 YY_RULE_SETUP
-#line 272 "scan.l"
+#line 282 "scan.l"
 {
+			   char *symbol;
+
                            yytext[strlen(yytext) - 3] = '\0';
-                           yylval.s = strdup(yytext);
+
+			   symbol = check_defines(yytext);
+			   if (symbol) {
+                             yylval.s = strdup(symbol);
+			   } else {
+                             yylval.s = strdup(yytext);
+			   }
                            return VAR_BEGIN;
                          }
 	YY_BREAK
 case 29:
 YY_RULE_SETUP
-#line 277 "scan.l"
+#line 295 "scan.l"
 {
-                           yylval.s = strdup(yytext+1);
+			   char *symbol;
+
+			   symbol = check_defines(yytext+1);
+			   if (symbol) {
+                             yylval.s = strdup(symbol);
+			   } else {
+                             yylval.s = strdup(yytext+1);
+			   }
                            return VAR_END;
                          }
 	YY_BREAK
 case 30:
 YY_RULE_SETUP
-#line 281 "scan.l"
+#line 306 "scan.l"
 {
-			   struct symbol *sym;
+			   char *symbol;
 
-			   /* If not quoted, check for #define substitution */
-			   if (!quoted &&
-                               (sym = get_symbol(state.stTopDefines, yytext)) != NULL) {
-			     char *subst = get_symbol_annotation(sym);
-			     assert(subst != NULL);
- 			     if (strcmp(yytext, subst) == 0) {
- 			       /* if check for bad subsitution */
- 			       yylval.s = strdup(yytext);
- 			       return IDENTIFIER;
- 			     } else {
- 			       char buffer[BUFSIZ];
+			   symbol = check_defines(yytext);
+			   if (symbol) {
+ 			     char buffer[BUFSIZ];
                                
-                               /* Make the substitution with a leading space,
-                                  that way it won't be a label */
-                               buffer[0] = ' ';
-                               buffer[1] = '\0';
-                               strcat(buffer, subst);
-                               push_string(buffer);
- 			     }
-			   } else {
+                             /* Make the substitution with a leading space,
+                                so it won't be a label */
+                             sprintf(buffer, " %s", symbol); 
+                             push_string(buffer);
+                           } else {
                              yylval.s = strdup(yytext);
 			     return IDENTIFIER;
-			   }
+                           }
 			 }
 	YY_BREAK
 case 31:
 YY_RULE_SETUP
-#line 308 "scan.l"
+#line 322 "scan.l"
 {
 /* Ugh.  As a special case, treat processor names, such as 16C84
 as identifiers rather than as hex numbers. */
@@ -1547,7 +1561,7 @@ as identifiers rather than as hex numbers. */
 	YY_BREAK
 case 32:
 YY_RULE_SETUP
-#line 314 "scan.l"
+#line 328 "scan.l"
 {
                            yylval.i = stringtolong(yytext + 2, 16);
 			   return NUMBER;
@@ -1555,7 +1569,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 33:
 YY_RULE_SETUP
-#line 318 "scan.l"
+#line 332 "scan.l"
 {
                            if (state.radix == 16) {
                              yylval.i = stringtolong(yytext, 16);                           
@@ -1568,7 +1582,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 34:
 YY_RULE_SETUP
-#line 327 "scan.l"
+#line 341 "scan.l"
 {
                            yytext[yyleng - 1] = '\0';
 			   yylval.i = stringtolong(yytext + 2, 2);
@@ -1577,7 +1591,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 35:
 YY_RULE_SETUP
-#line 332 "scan.l"
+#line 346 "scan.l"
 {			 
                            yytext[yyleng - 1] = '\0';
                            yylval.i = stringtolong(yytext, 8);
@@ -1586,7 +1600,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 36:
 YY_RULE_SETUP
-#line 337 "scan.l"
+#line 351 "scan.l"
 {
                            yytext[yyleng - 1] = '\0';
 			   yylval.i = stringtolong(yytext + 2, 8);
@@ -1595,7 +1609,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 37:
 YY_RULE_SETUP
-#line 342 "scan.l"
+#line 356 "scan.l"
 {
                            if (state.radix == 16) {
                              yylval.i = stringtolong(yytext, 16);                           
@@ -1608,7 +1622,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 38:
 YY_RULE_SETUP
-#line 351 "scan.l"
+#line 365 "scan.l"
 {
                            yytext[yyleng - 1] = '\0';
 			   yylval.i = stringtolong(yytext + 2, 10);
@@ -1617,7 +1631,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 39:
 YY_RULE_SETUP
-#line 356 "scan.l"
+#line 370 "scan.l"
 {
                            yylval.i = stringtolong(yytext + 1, 10);
 			   return NUMBER;
@@ -1625,7 +1639,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 40:
 YY_RULE_SETUP
-#line 360 "scan.l"
+#line 374 "scan.l"
 {			 
                            yytext[yyleng - 1] = '\0';
                            yylval.i = stringtolong(yytext, 16);
@@ -1634,7 +1648,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 41:
 YY_RULE_SETUP
-#line 365 "scan.l"
+#line 379 "scan.l"
 {
                            yytext[yyleng - 1] = '\0';
 			   yylval.i = stringtolong(yytext + 2, 16);
@@ -1643,7 +1657,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 42:
 YY_RULE_SETUP
-#line 370 "scan.l"
+#line 384 "scan.l"
 {
                            if (force_decimal) {
                              yylval.i = stringtolong(yytext, 10);
@@ -1655,7 +1669,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 43:
 YY_RULE_SETUP
-#line 378 "scan.l"
+#line 392 "scan.l"
 {
                            yylval.i = gpasm_magic(yytext + 1);
 			   return NUMBER;
@@ -1663,7 +1677,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 44:
 YY_RULE_SETUP
-#line 382 "scan.l"
+#line 396 "scan.l"
 {
 			   char *pc = &yytext[yyleng - 1];
 			   if (*pc == '"')
@@ -1676,7 +1690,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 45:
 YY_RULE_SETUP
-#line 391 "scan.l"
+#line 405 "scan.l"
 {
                            yylval.i = gpasm_magic(yytext + 1);
 			   return NUMBER;
@@ -1684,7 +1698,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 46:
 YY_RULE_SETUP
-#line 395 "scan.l"
+#line 409 "scan.l"
 {
                            yylval.i = yytext[2];
 			   return NUMBER;
@@ -1692,127 +1706,127 @@ YY_RULE_SETUP
 	YY_BREAK
 case 47:
 YY_RULE_SETUP
-#line 399 "scan.l"
+#line 413 "scan.l"
 OPERATOR(LSH);
 	YY_BREAK
 case 48:
 YY_RULE_SETUP
-#line 400 "scan.l"
+#line 414 "scan.l"
 OPERATOR(RSH);
 	YY_BREAK
 case 49:
 YY_RULE_SETUP
-#line 401 "scan.l"
+#line 415 "scan.l"
 OPERATOR(GREATER_EQUAL);
 	YY_BREAK
 case 50:
 YY_RULE_SETUP
-#line 402 "scan.l"
+#line 416 "scan.l"
 OPERATOR(LESS_EQUAL);
 	YY_BREAK
 case 51:
 YY_RULE_SETUP
-#line 403 "scan.l"
+#line 417 "scan.l"
 OPERATOR(EQUAL);
 	YY_BREAK
 case 52:
 YY_RULE_SETUP
-#line 404 "scan.l"
+#line 418 "scan.l"
 OPERATOR(NOT_EQUAL);
 	YY_BREAK
 case 53:
 YY_RULE_SETUP
-#line 405 "scan.l"
+#line 419 "scan.l"
 OPERATOR(LOGICAL_AND);
 	YY_BREAK
 case 54:
 YY_RULE_SETUP
-#line 406 "scan.l"
+#line 420 "scan.l"
 OPERATOR(LOGICAL_OR);
 	YY_BREAK
 case 55:
 YY_RULE_SETUP
-#line 408 "scan.l"
+#line 422 "scan.l"
 OPERATOR(ASSIGN_PLUS);
 	YY_BREAK
 case 56:
 YY_RULE_SETUP
-#line 409 "scan.l"
+#line 423 "scan.l"
 OPERATOR(ASSIGN_MINUS);
 	YY_BREAK
 case 57:
 YY_RULE_SETUP
-#line 410 "scan.l"
+#line 424 "scan.l"
 OPERATOR(ASSIGN_MULTIPLY);
 	YY_BREAK
 case 58:
 YY_RULE_SETUP
-#line 411 "scan.l"
+#line 425 "scan.l"
 OPERATOR(ASSIGN_DIVIDE);
 	YY_BREAK
 case 59:
 YY_RULE_SETUP
-#line 412 "scan.l"
+#line 426 "scan.l"
 OPERATOR(ASSIGN_MODULUS);
 	YY_BREAK
 case 60:
 YY_RULE_SETUP
-#line 413 "scan.l"
+#line 427 "scan.l"
 OPERATOR(ASSIGN_LSH);
 	YY_BREAK
 case 61:
 YY_RULE_SETUP
-#line 414 "scan.l"
+#line 428 "scan.l"
 OPERATOR(ASSIGN_RSH);
 	YY_BREAK
 case 62:
 YY_RULE_SETUP
-#line 415 "scan.l"
+#line 429 "scan.l"
 OPERATOR(ASSIGN_AND);
 	YY_BREAK
 case 63:
 YY_RULE_SETUP
-#line 416 "scan.l"
+#line 430 "scan.l"
 OPERATOR(ASSIGN_OR);
 	YY_BREAK
 case 64:
 YY_RULE_SETUP
-#line 417 "scan.l"
+#line 431 "scan.l"
 OPERATOR(ASSIGN_XOR);
 	YY_BREAK
 case 65:
 YY_RULE_SETUP
-#line 419 "scan.l"
+#line 433 "scan.l"
 OPERATOR(INCREMENT);
 	YY_BREAK
 case 66:
 YY_RULE_SETUP
-#line 420 "scan.l"
+#line 434 "scan.l"
 OPERATOR(DECREMENT);
 	YY_BREAK
 case 67:
 YY_RULE_SETUP
-#line 422 "scan.l"
+#line 436 "scan.l"
 OPERATOR(TBL_POST_INC);
 	YY_BREAK
 case 68:
 YY_RULE_SETUP
-#line 423 "scan.l"
+#line 437 "scan.l"
 OPERATOR(TBL_POST_DEC);
 	YY_BREAK
 case 69:
 YY_RULE_SETUP
-#line 424 "scan.l"
+#line 438 "scan.l"
 OPERATOR(TBL_PRE_INC);
 	YY_BREAK
 case 70:
 YY_RULE_SETUP
-#line 426 "scan.l"
+#line 440 "scan.l"
 
 	YY_BREAK
 case 71:
 YY_RULE_SETUP
-#line 427 "scan.l"
+#line 441 "scan.l"
 {
 			   quoted = 0;
 			   force_decimal = 0;
@@ -1821,12 +1835,12 @@ YY_RULE_SETUP
 	YY_BREAK
 case 72:
 YY_RULE_SETUP
-#line 432 "scan.l"
+#line 446 "scan.l"
 {  }
 	YY_BREAK
 case 73:
 YY_RULE_SETUP
-#line 433 "scan.l"
+#line 447 "scan.l"
 { 
 			   yylval.i = yytext[0];
 		           return yytext[0];
@@ -1834,10 +1848,10 @@ YY_RULE_SETUP
 	YY_BREAK
 case 74:
 YY_RULE_SETUP
-#line 437 "scan.l"
+#line 451 "scan.l"
 ECHO;
 	YY_BREAK
-#line 1841 "scan.c"
+#line 1855 "scan.c"
 
 	case YY_END_OF_BUFFER:
 		{
@@ -2719,7 +2733,7 @@ int main()
 	return 0;
 	}
 #endif
-#line 437 "scan.l"
+#line 451 "scan.l"
 
 
 static char *
@@ -3006,3 +3020,22 @@ enum identtype identify(char *text)
   return type;
 }
 
+static char *
+check_defines(char *symbol)
+{
+  struct symbol *sym;
+  char *subst = NULL;
+
+  /* If not quoted, check for #define substitution */
+  if (!quoted &&
+     (sym = get_symbol(state.stTopDefines, yytext)) != NULL) {
+    subst = get_symbol_annotation(sym);
+    assert(subst != NULL);
+    if (strcmp(yytext, subst) == 0) {
+      /* check for a bad subsitution */
+      subst = NULL;
+    }
+  }
+
+  return subst;
+}
